--- a/cloud-stream-consumer/src/main/resources/application.properties
+++ b/cloud-stream-consumer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8401
+server.port=8402
 
 spring.application.name=cloud-stream-consumer
 
@@ -18,5 +18,13 @@ spring.cloud.stream.bindings.stream_input.content-type=application/json
 spring.cloud.stream.bindings.stream_input.binder=rabbitmq1
 # 分组
 spring.cloud.stream.bindings.stream_input.group=consumer_group_a
+# 是否开启消息分区 Default: 'false'
+spring.cloud.stream.bindings.stream_input.consumer.partitioned=true
+# 当前消费者总的实例数量
+spring.cloud.stream.instance-count=3
+# 当前实例的索引号，最大值为spring.cloud.stream.instance-count 减 1
+spring.cloud.stream.instance-index=2
+
+
 #绑定routing-key
 spring.cloud.stream.rabbit.bindings.stream_input.consumer.binding-routing-key=routing_key_a
