--- a/cloud-stream-provider/src/main/resources/application.properties
+++ b/cloud-stream-provider/src/main/resources/application.properties
@@ -24,6 +24,10 @@ spring.cloud.stream.bindings.stream_output.destination=streamExchange
 spring.cloud.stream.bindings.stream_output.content-type=application/json
 #要绑定的消息服务的实例名
 spring.cloud.stream.bindings.stream_output.binder=rabbitmq1
+# 分区键的表达式规则，可以根据实际的输出消息规则配置spEL来生成合适的分区键
+spring.cloud.stream.bindings.stream_output.producer.partition-key-expression=payload
+# 消息分区数量
+spring.cloud.stream.bindings.stream_output.producer.partition-count=2
 
 #绑定routing-key
 spring.cloud.stream.rabbit.bindings.stream_output.producer.routing-key-expression='routing_key_a'
