--- a/cloud-sleuth/pom.xml
+++ b/cloud-sleuth/pom.xml
@@ -30,11 +30,15 @@
             <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/io.zipkin.java/zipkin-server -->
         <dependency>
             <groupId>io.zipkin.java</groupId>
             <artifactId>zipkin-server</artifactId>
-            <version>2.12.9</version>
+            <version>2.9.3</version>
+        </dependency>
+        <dependency>
+            <groupId>io.zipkin.java</groupId>
+            <artifactId>zipkin-autoconfigure-ui</artifactId>
+            <version>2.9.3</version>
         </dependency>
 
     </dependencies>
