--- a/cloud-sleuth/src/main/resources/application.properties
+++ b/cloud-sleuth/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8601
 
-spring.application.name=cloud-sleuth
+spring.application.name=sleuth-zipkin-server
 
 management.metrics.web.server.auto-time-requests=false
+
+spring.main.allow-bean-definition-overriding=true
