--- a/eureka-provider/src/main/resources/application.properties
+++ b/eureka-provider/src/main/resources/application.properties
@@ -15,3 +15,10 @@ eureka.instance.lease-expiration-duration-in-seconds=3
 
 # actuator 监控
 management.endpoints.web.exposure.include=*
+
+# zipkin 服务
+spring.zipkin.base-url=http://localhost:8601
+# 提交类型
+spring.zipkin.sender.type=web
+#定义抽样比率
+spring.sleuth.sampler.probability=1.0
