--- a/zuul-gateway/src/main/resources/application.properties
+++ b/zuul-gateway/src/main/resources/application.properties
@@ -47,3 +47,10 @@ zuul.prefix=/zuul-proxy
 
 # 饥饿加载
 zuul.ribbon.eager-load.enabled=true
+
+# zipkin 服务
+spring.zipkin.base-url=http://localhost:8601
+# 提交类型
+spring.zipkin.sender.type=web
+#定义抽样比率
+spring.sleuth.sampler.probability=1.0
