cloud-sleuth zipkin

--- a/eureka-consumer/src/main/resources/application.properties
+++ b/eureka-consumer/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=7001
 eureka.client.register-with-eureka=true
 # 和eureka服务器通讯的URL
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka
-spring.application.name=CONSUMERS
-eureka.instance.instance-id=consumer
+spring.application.name=EUREKA-CONSUMERS
+eureka.instance.instance-id=eureka-consumer
 
 # 配置请求GZIP压缩
 feign.compression.request.enabled=true
@@ -20,3 +20,10 @@ feign.hystrix.enabled=true
 
 # actuator 监控
 management.endpoints.web.exposure.include=*
+
+# zipkin 服务
+spring.zipkin.base-url=http://localhost:8601
+# 提交类型
+spring.zipkin.sender.type=web
+#定义抽样比率
+spring.sleuth.sampler.probability=1.0
