cloud-sleuth zipkin

--- a/cloud-sleuth/src/main/resources/application.properties
+++ b/cloud-sleuth/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=8601
 
 spring.application.name=sleuth-zipkin-server
 
+
 management.metrics.web.server.auto-time-requests=false
 
-spring.main.allow-bean-definition-overriding=true
+#spring.main.allow-bean-definition-overriding=true
