--- a/eureka-consumer/src/main/resources/application.properties
+++ b/eureka-consumer/src/main/resources/application.properties
@@ -27,3 +27,6 @@ spring.zipkin.base-url=http://localhost:8601
 spring.zipkin.sender.type=web
 #定义抽样比率
 spring.sleuth.sampler.probability=1.0
+
+# 允许bean name 重写
+spring.main.allow-bean-definition-overriding=true
