--- a/zuul-gateway/src/main/resources/application.properties
+++ b/zuul-gateway/src/main/resources/application.properties
@@ -8,7 +8,7 @@ eureka.client.register-with-eureka=true
 # 和eureka服务器通讯的URL
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka
 # 在地址栏上使用 IP 地址进行显示
-eureka.instance.prefer-ip-address=true
+eureka.instance.prefer-ip-address=false
 
 # 设置心跳的时间间隔（默认是30秒）
 eureka.instance.lease-renewal-interval-in-seconds=5
