--- a/cloud-sleuth/pom.xml
+++ b/cloud-sleuth/pom.xml
@@ -14,31 +14,19 @@
     <description>cloud-sleuth</description>
     <properties>
         <java.version>1.8</java.version>
+        <zipkin.version>2.10.0</zipkin.version>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-sleuth</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-zipkin</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>io.zipkin.java</groupId>
             <artifactId>zipkin-server</artifactId>
-            <version>2.9.3</version>
+            <version>${zipkin.version}</version>
         </dependency>
         <dependency>
             <groupId>io.zipkin.java</groupId>
             <artifactId>zipkin-autoconfigure-ui</artifactId>
-            <version>2.9.3</version>
+            <version>${zipkin.version}</version>
         </dependency>
 
     </dependencies>
