--- a/cloud-sleuth/src/main/resources/application.properties
+++ b/cloud-sleuth/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.application.name=sleuth-zipkin-server
 
 management.metrics.web.server.auto-time-requests=false
 
-#spring.main.allow-bean-definition-overriding=true
+spring.main.allow-bean-definition-overriding=true
