--- a/cloud-sleuth/src/main/resources/application.properties
+++ b/cloud-sleuth/src/main/resources/application.properties
@@ -6,3 +6,23 @@ spring.application.name=sleuth-zipkin-server
 management.metrics.web.server.auto-time-requests=false
 
 spring.main.allow-bean-definition-overriding=true
+
+zipkin.collector.sample-rate=1.0
+zipkin.collector.http.enabled=false
+
+# rabbitmq 配置
+zipkin.collector.rabbitmq.addresses=localhost:5672
+zipkin.collector.rabbitmq.password=guest
+zipkin.collector.rabbitmq.queue=zipkin
+zipkin.collector.rabbitmq.username=guest
+zipkin.collector.rabbitmq.virtual-host=/
+
+# mysql 配置
+zipkin.storage.type=mysql
+zipkin.storage.mysql.host=localhost
+zipkin.storage.mysql.port=3306
+zipkin.storage.mysql.username=root
+zipkin.storage.mysql.password=1234
+zipkin.storage.mysql.db=zipkin
+
+
