--- a/user-provider/src/main/resources/application.properties
+++ b/user-provider/src/main/resources/application.properties
@@ -19,7 +19,7 @@ management.endpoints.web.exposure.include=*
 # zipkin 服务
 spring.zipkin.base-url=http://localhost:8601
 # 提交类型
-spring.zipkin.sender.type=web
+spring.zipkin.sender.type=rabbit
 #定义抽样比率
 spring.sleuth.sampler.probability=1.0
 
