--- a/zuul-gateway/src/main/resources/application.properties
+++ b/zuul-gateway/src/main/resources/application.properties
@@ -51,6 +51,6 @@ zuul.ribbon.eager-load.enabled=true
 # zipkin 服务
 spring.zipkin.base-url=http://localhost:8601
 # 提交类型
-spring.zipkin.sender.type=web
+spring.zipkin.sender.type=rabbit
 #定义抽样比率
 spring.sleuth.sampler.probability=1.0
