--- a/zuul-gateway/src/main/resources/application.properties
+++ b/zuul-gateway/src/main/resources/application.properties
@@ -4,11 +4,12 @@ spring.application.name=ZUUL-GATEWAY
 
 # 此客户端是否应该从eureka server 获取eureka注册信息
 eureka.client.register-with-eureka=true
+eureka.instance.instance-id=zuul-gateway
 
 # 和eureka服务器通讯的URL
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka
 # 在地址栏上使用 IP 地址进行显示
-eureka.instance.prefer-ip-address=false
+eureka.instance.prefer-ip-address=true
 
 # 设置心跳的时间间隔（默认是30秒）
 eureka.instance.lease-renewal-interval-in-seconds=15
