--- a/eureka-consumer/src/main/resources/application.properties
+++ b/eureka-consumer/src/main/resources/application.properties
@@ -32,3 +32,7 @@ spring.sleuth.sampler.probability=1.0
 # 允许bean name 重写
 spring.main.allow-bean-definition-overriding=true
 
+# 开启日志
+logging.level.site.sunlong.eurekaConsumer.service=debug
+
+
