--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -14,3 +14,7 @@ eureka.server.enable-self-preservation=false
 #设置清理的间隔时间，毫秒单位（默认是60秒）
 eureka.server.eviction-interval-timer-in-ms=60000
 
+#spring.security 配置
+spring.security.user.name=eurekaUser
+spring.security.user.password=eurekaUserPassword
+spring.security.user.roles=user
