--- a/eureka-consumer/pom.xml
+++ b/eureka-consumer/pom.xml
@@ -10,12 +10,11 @@
     </parent>
 
     <artifactId>eureka-consumer</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+
     <name>eureka-consumer</name>
     <description>eureka-consumer</description>
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
     </properties>
     <dependencies>
 
@@ -63,6 +62,13 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>site.sunlong</groupId>
+            <artifactId>cloud-security</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
     </dependencies>
 
 
