--- a/zuul-gateway/src/main/resources/application.properties
+++ b/zuul-gateway/src/main/resources/application.properties
@@ -55,3 +55,14 @@ spring.zipkin.base-url=http://localhost:8601
 spring.zipkin.sender.type=rabbit
 #定义抽样比率
 spring.sleuth.sampler.probability=1.0
+
+# 令牌端点
+security.oauth2.client.access-token-uri=http://localhost:7101/uaa/oauth/token
+# 授权端点
+security.oauth2.client.user-authorization-uri=http://localhost:7101/uaa/oauth/authorize
+# oauth2 客户端ID
+security.oauth2.client.client-id=zuul_server
+# oauth2 客户端 秘钥
+security.oauth2.client.client-secret=secret
+# 使用对称加密方式，默认算法hs256
+security.oauth2.resource.jwt.key-value=zuul_oauth2_jwt
