--- a/oauth2-server/src/main/resources/application.properties
+++ b/oauth2-server/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+server.port=7101
+# web根路径
+server.servlet.context-path=/uaa
 
+spring.application.name=oauth-server
+
+# 此客户端是否应该从eureka server 获取eureka注册信息
+eureka.client.register-with-eureka=true
+eureka.instance.instance-id=oauth-server
+
+# 和eureka服务器通讯的URL
+eureka.client.service-url.defaultZone=http://localhost:8001/eureka
+# 在地址栏上使用 IP 地址进行显示
+eureka.instance.prefer-ip-address=true
