--- a/cloud-gateway/src/main/resources/application.properties
+++ b/cloud-gateway/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-server.port=7101
-# web根路径
-server.servlet.context-path=/uaa
+server.port=7201
+spring.application.name=CLOUD-GATEWAY
 
+# 此客户端是否应该从eureka server 获取eureka注册信息
 eureka.client.register-with-eureka=true
-# 和eureka服务器通讯的URL
-eureka.client.service-url.defaultZone=http://eurekaUser:eurekaUserPassword@localhost:8001/eureka
-spring.application.name=OAUTH-SERVER
+eureka.instance.instance-id=cloud-gateway
 
-eureka.instance.instance-id=oauth-server
+# 和eureka服务器通讯的URL
+eureka.client.service-url.defaultZone=http://localhost:8001/eureka
 # 在地址栏上使用 IP 地址进行显示
 eureka.instance.prefer-ip-address=true
 
@@ -15,3 +14,4 @@ eureka.instance.prefer-ip-address=true
 eureka.instance.lease-renewal-interval-in-seconds=15
 # eureka server 最后一次收到心跳时等待的时间，超时将会移除client（默认是90秒）
 eureka.instance.lease-expiration-duration-in-seconds=90
+
