--- a/user-provider/src/main/resources/application.properties
+++ b/user-provider/src/main/resources/application.properties
@@ -6,7 +6,7 @@ eureka.instance.instance-id=userProvider
 
 eureka.client.register-with-eureka=true
 # 和eureka服务器通讯的URL
-eureka.client.service-url.defaultZone=http://localhost:8001/eureka
+eureka.client.service-url.defaultZone=http://eurekaUser:eurekaUserPassword@localhost:8001/eureka
 
 # 设置心跳的时间间隔（默认是30秒）
 eureka.instance.lease-renewal-interval-in-seconds=5
