--- a/zuul-gateway/src/main/resources/application.properties
+++ b/zuul-gateway/src/main/resources/application.properties
@@ -7,7 +7,7 @@ eureka.client.register-with-eureka=true
 eureka.instance.instance-id=zuul-gateway
 
 # 和eureka服务器通讯的URL
-eureka.client.service-url.defaultZone=http://localhost:8001/eureka
+eureka.client.service-url.defaultZone=http://${eureka.host:127.0.0.1}:${eureka.port:8001}/eureka
 # 在地址栏上使用 IP 地址进行显示
 eureka.instance.prefer-ip-address=true
 
@@ -48,6 +48,14 @@ zuul.prefix=/zuul-proxy
 
 # 饥饿加载
 zuul.ribbon.eager-load.enabled=true
+
+#zuul默认采用信号量隔离策略
+#设置Hystrix隔离策略为线程池
+zuul.ribbon-isolation-strategy=thread
+
+#每个路由使用独立的线程池
+zuul.thread-pool.use-separate-thread-pools=true
+zuul.thread-pool.thread-pool-key-prefix=zuul-thread-pool
 
 # zipkin 服务
 spring.zipkin.base-url=http://localhost:8601
