--- a/cloud-gateway/pom.xml
+++ b/cloud-gateway/pom.xml
@@ -8,18 +8,17 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>oauth2-server</artifactId>
+    <artifactId>cloud-gateway</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>oauth2-server</name>
-    <description>oauth2-server</description>
+    <name>cloud-gateway</name>
+    <description>cloud-gateway</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-oauth2 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-oauth2</artifactId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
 
         <dependency>
@@ -27,11 +26,9 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+
     </dependencies>
+
 
     <build>
         <plugins>
