--- a/eureka-consumer/src/main/resources/application.properties
+++ b/eureka-consumer/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=7001
 #
 eureka.client.register-with-eureka=true
 # 和eureka服务器通讯的URL
-eureka.client.service-url.defaultZone=http://localhost:8001/eureka
+eureka.client.service-url.defaultZone=http://eurekaUser:eurekaUserPassword@localhost:8001/eureka
 spring.application.name=EUREKA-CONSUMERS
 eureka.instance.instance-id=eureka-consumer
 
