--- a/zuul-gateway/src/main/resources/application.properties
+++ b/zuul-gateway/src/main/resources/application.properties
@@ -7,7 +7,7 @@ eureka.client.register-with-eureka=true
 eureka.instance.instance-id=zuul-gateway
 
 # 和eureka服务器通讯的URL
-eureka.client.service-url.defaultZone=http://${eureka.host:127.0.0.1}:${eureka.port:8001}/eureka
+eureka.client.service-url.defaultZone=http://eurekaUser:eurekaUserPassword@localhost:8001/eureka
 # 在地址栏上使用 IP 地址进行显示
 eureka.instance.prefer-ip-address=true
 
@@ -64,13 +64,17 @@ spring.zipkin.sender.type=rabbit
 #定义抽样比率
 spring.sleuth.sampler.probability=1.0
 
+#spring security 配置
+spring.security.user.name=zuul-user
+spring.security.user.password=zuul-password
+
 # 令牌端点
-security.oauth2.client.access-token-uri=http://localhost:7101/uaa/oauth/token
-# 授权端点
-security.oauth2.client.user-authorization-uri=http://localhost:7101/uaa/oauth/authorize
-# oauth2 客户端ID
-security.oauth2.client.client-id=zuul_server
-# oauth2 客户端 秘钥
-security.oauth2.client.client-secret=secret
-# 使用对称加密方式，默认算法hs256
-security.oauth2.resource.jwt.key-value=zuul_oauth2_jwt
+#security.oauth2.client.access-token-uri=http://localhost:7101/uaa/oauth/token
+## 授权端点
+#security.oauth2.client.user-authorization-uri=http://localhost:7101/uaa/oauth/authorize
+## oauth2 客户端ID
+#security.oauth2.client.client-id=zuul_server
+## oauth2 客户端 秘钥
+#security.oauth2.client.client-secret=secret
+## 使用对称加密方式，默认算法hs256
+#security.oauth2.resource.jwt.key-value=zuul_oauth2_jwt
