spring cloud gateway

--- a/cloud-gateway/src/main/resources/application.properties
+++ b/cloud-gateway/src/main/resources/application.properties
@@ -6,7 +6,7 @@ eureka.client.register-with-eureka=true
 eureka.instance.instance-id=cloud-gateway
 
 # 和eureka服务器通讯的URL
-eureka.client.service-url.defaultZone=http://localhost:8001/eureka
+eureka.client.service-url.defaultZone=http://eurekaUser:eurekaUserPassword@localhost:8001/eureka
 # 在地址栏上使用 IP 地址进行显示
 eureka.instance.prefer-ip-address=true
 
@@ -15,3 +15,19 @@ eureka.instance.lease-renewal-interval-in-seconds=15
 # eureka server 最后一次收到心跳时等待的时间，超时将会移除client（默认是90秒）
 eureka.instance.lease-expiration-duration-in-seconds=90
 
+# 路由配置
+spring.cloud.gateway.routes[0].id=my_csdn_route
+spring.cloud.gateway.routes[0].uri=http://blog.csdn.net/
+spring.cloud.gateway.routes[0].predicates[0]=Path=/qq_39654841
+
+
+
+
+# 日志配置
+logging.level.org.springframework.cloud.gateway=trace
+logging.level.org.springframework.http.server.reactive=debug
+logging.level.org.springframework.web.reactive=debug
+
+
+# actuator 监控 http://localhost:7201/actuator/gateway/routes
+management.endpoints.web.exposure.include=*
