--- a/cloud-gateway/src/main/resources/application.properties
+++ b/cloud-gateway/src/main/resources/application.properties
@@ -15,12 +15,15 @@ eureka.instance.lease-renewal-interval-in-seconds=15
 # eureka server 最后一次收到心跳时等待的时间，超时将会移除client（默认是90秒）
 eureka.instance.lease-expiration-duration-in-seconds=90
 
+
 # 路由配置
 spring.cloud.gateway.routes[0].id=my_csdn_route
 spring.cloud.gateway.routes[0].uri=http://blog.csdn.net/
 spring.cloud.gateway.routes[0].predicates[0]=Path=/qq_39654841
-
-
+#after 路由
+spring.cloud.gateway.routes[1].id=after_route
+spring.cloud.gateway.routes[1].uri=http://blog.csdn.net/qq_39654841/category_9123089.html
+spring.cloud.gateway.routes[1].predicates[0]=After=2021-12-26T23:40:45.443+08:00[Asia/Shanghai]
 
 
 # 日志配置
