spring cloud gateway

--- a/cloud-gateway/src/main/resources/application.properties
+++ b/cloud-gateway/src/main/resources/application.properties
@@ -19,18 +19,41 @@ eureka.instance.lease-expiration-duration-in-seconds=90
 # 路由配置
 spring.cloud.gateway.routes[0].id=my_csdn_route
 spring.cloud.gateway.routes[0].uri=http://blog.csdn.net/
-spring.cloud.gateway.routes[0].predicates[0]=Path=/qq_39654841
+spring.cloud.gateway.routes[0].predicates[0]=Path=/qq_39654841/{segment}
 #after 路由
 spring.cloud.gateway.routes[1].id=after_route
 spring.cloud.gateway.routes[1].uri=http://blog.csdn.net/qq_39654841/category_9123089.html
-spring.cloud.gateway.routes[1].predicates[0]=After=2021-12-26T23:40:45.443+08:00[Asia/Shanghai]
+#spring.cloud.gateway.routes[1].predicates[0]=After=2021-12-27T23:50:12.191+08:00[Asia/Shanghai]
+# before
+#spring.cloud.gateway.routes[1].predicates[0]=Before=2021-12-27T23:50:12.191+08:00[Asia/Shanghai]
+#Between
+#spring.cloud.gateway.routes[1].predicates[0]=Between=2021-12-27T20:50:12.191+08:00[Asia/Shanghai],2021-12-27T23:50:12.191+08:00[Asia/Shanghai]
+#Cookie
+#spring.cloud.gateway.routes[1].predicates[0]=Cookie=cloud,gateway
+#Header
+#spring.cloud.gateway.routes[1].predicates[0]=Header=X-Requested-Id,\\d+
+#Host
+#spring.cloud.gateway.routes[1].predicates[0]=Host=**.sunlong.site
+#Method
+#spring.cloud.gateway.routes[1].predicates[0]=Method=GET
+#Query
+#spring.cloud.gateway.routes[1].predicates[0]=Query=cloud,gateway
+#RemoteAddr
+spring.cloud.gateway.routes[1].predicates[0]=RemoteAddr=127.0.0.1
+
 
 
 # 日志配置
-logging.level.org.springframework.cloud.gateway=trace
+logging.level.org.springframework.cloud.gateway=debug
 logging.level.org.springframework.http.server.reactive=debug
 logging.level.org.springframework.web.reactive=debug
-
+logging.level.reactor.netty=debug
 
 # actuator 监控 http://localhost:7201/actuator/gateway/routes
 management.endpoints.web.exposure.include=*
+
+# 是否与服务发现组件相结合，通过serviceId 转发到具体的实例
+spring.cloud.gateway.discovery.locator.enabled=true
+# 注册中心为eureka时，设置为true表示开启用小写的serviceId 进行服务路由的转发
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
