spring cloud gateway filter

--- a/cloud-gateway/src/main/resources/application.properties
+++ b/cloud-gateway/src/main/resources/application.properties
@@ -21,8 +21,8 @@ spring.cloud.gateway.routes[0].id=my_csdn_route
 spring.cloud.gateway.routes[0].uri=http://blog.csdn.net/
 spring.cloud.gateway.routes[0].predicates[0]=Path=/qq_39654841/{segment}
 #after 路由
-spring.cloud.gateway.routes[1].id=after_route
-spring.cloud.gateway.routes[1].uri=http://blog.csdn.net/qq_39654841/category_9123089.html
+#spring.cloud.gateway.routes[1].id=after_route
+#spring.cloud.gateway.routes[1].uri=http://blog.csdn.net/qq_39654841/category_9123089.html
 #spring.cloud.gateway.routes[1].predicates[0]=After=2021-12-27T23:50:12.191+08:00[Asia/Shanghai]
 # before
 #spring.cloud.gateway.routes[1].predicates[0]=Before=2021-12-27T23:50:12.191+08:00[Asia/Shanghai]
@@ -39,9 +39,34 @@ spring.cloud.gateway.routes[1].uri=http://blog.csdn.net/qq_39654841/category_912
 #Query
 #spring.cloud.gateway.routes[1].predicates[0]=Query=cloud,gateway
 #RemoteAddr
-spring.cloud.gateway.routes[1].predicates[0]=RemoteAddr=127.0.0.1
+#spring.cloud.gateway.routes[1].predicates[0]=RemoteAddr=127.0.0.1
+# eureka_consumers
+spring.cloud.gateway.routes[1].id=eureka_consumers_route
+spring.cloud.gateway.routes[1].uri=http://localhost:7001
+spring.cloud.gateway.routes[1].predicates[0]=Path=/a/b/consumer/feign/gateway/rewritePath/request
+spring.cloud.gateway.routes[1].filters[0]=AddRequestHeader=request-arg,Header
+spring.cloud.gateway.routes[1].filters[1]=AddRequestParameter=request-parameter,addRequestParameter
+spring.cloud.gateway.routes[1].filters[2]=AddResponseHeader=add-response-header,addResponseHeader
+spring.cloud.gateway.routes[1].filters[3]=StripPrefix=2
+spring.cloud.gateway.routes[1].filters[4]=RewritePath=/rewritePath/?(?<segment>.*), /$\\{segment}
+# Retry 过滤器
+#spring.cloud.gateway.routes[1].filters[5].name=Retry
+#spring.cloud.gateway.routes[1].filters[5].args.retries=3
+#spring.cloud.gateway.routes[1].filters[5].args.statuses=BAD_GATEWAY
+#spring.cloud.gateway.routes[1].filters[5].args.methods=GET,POST
+#spring.cloud.gateway.routes[1].filters[5].args.backoff.firstBackoff=10ms
+#spring.cloud.gateway.routes[1].filters[5].args.backoff.maxBackoff=50ms
+#spring.cloud.gateway.routes[1].filters[5].args.backoff.factor=2
+#spring.cloud.gateway.routes[1].filters[5].args.backoff.basedOnPreviousValue=false
 
-
+spring.cloud.gateway.routes[1].filters[5]=Retry=3,INTERNAL_SERVER_ERROR,GET,10ms,50ms,2,false
+# Hystrix 过滤器
+spring.cloud.gateway.routes[1].filters[6].name=Hystrix
+# HystrixCommand 名字
+spring.cloud.gateway.routes[1].filters[6].args.name=fallbackcmd
+spring.cloud.gateway.routes[1].filters[6].args.fallbackUri=forward:/eureka_consumer/fallback
+#fackball 时间
+hystrix.command.fallbackcmd.execution.isolation.thread.timeoutInMilliseconds=5000
 
 # 日志配置
 logging.level.org.springframework.cloud.gateway=debug
