spring cloud gateway 限流

--- a/cloud-gateway/src/main/resources/application.properties
+++ b/cloud-gateway/src/main/resources/application.properties
@@ -51,8 +51,11 @@ spring.cloud.gateway.routes[1].filters[3]=StripPrefix=2
 spring.cloud.gateway.routes[1].filters[4]=RewritePath=/rewritePath/?(?<segment>.*), /$\\{segment}
 # Retry 过滤器
 #spring.cloud.gateway.routes[1].filters[5].name=Retry
+# 重试次数
 #spring.cloud.gateway.routes[1].filters[5].args.retries=3
+# 重试失败状态
 #spring.cloud.gateway.routes[1].filters[5].args.statuses=BAD_GATEWAY
+# 允许的请求方法
 #spring.cloud.gateway.routes[1].filters[5].args.methods=GET,POST
 #spring.cloud.gateway.routes[1].filters[5].args.backoff.firstBackoff=10ms
 #spring.cloud.gateway.routes[1].filters[5].args.backoff.maxBackoff=50ms
@@ -67,6 +70,26 @@ spring.cloud.gateway.routes[1].filters[6].args.name=fallbackcmd
 spring.cloud.gateway.routes[1].filters[6].args.fallbackUri=forward:/eureka_consumer/fallback
 #fackball 时间
 hystrix.command.fallbackcmd.execution.isolation.thread.timeoutInMilliseconds=5000
+
+
+# 限流过滤器
+spring.cloud.gateway.routes[2].id=request_rate_limiter_route
+spring.cloud.gateway.routes[2].uri=http://localhost:7001
+spring.cloud.gateway.routes[2].predicates[0]=Path=/consumer/feign/gateway/rateLimit
+spring.cloud.gateway.routes[2].filters[0].name=RequestRateLimiter
+#令牌桶每秒填充平均速率
+spring.cloud.gateway.routes[2].filters[0].args.redis-rate-limiter.replenishRate=1
+#令牌桶总容量
+spring.cloud.gateway.routes[2].filters[0].args.redis-rate-limiter.burstCapacity=10
+#用于限流的键的解析器的 Bean 对象的名字。它使用 SpEL 表达式根据#{@beanName}从 Spring 容器中获取 Bean 对象
+spring.cloud.gateway.routes[2].filters[0].args.key-resolver=#{@uriKeyResolver}
+
+# redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.database=0
+spring.redis.jedis.pool.max-active=8
+
 
 # 日志配置
 logging.level.org.springframework.cloud.gateway=debug
