spring cloud gateway 限流

--- a/cloud-gateway/src/main/resources/application.properties
+++ b/cloud-gateway/src/main/resources/application.properties
@@ -19,7 +19,16 @@ eureka.instance.lease-expiration-duration-in-seconds=90
 # 路由配置
 spring.cloud.gateway.routes[0].id=my_csdn_route
 spring.cloud.gateway.routes[0].uri=http://blog.csdn.net/
-spring.cloud.gateway.routes[0].predicates[0]=Path=/qq_39654841/{segment}
+spring.cloud.gateway.routes[0].predicates[0]=Path=/qq_39654841
+# 限流过滤器
+spring.cloud.gateway.routes[0].filters[0].name=RequestRateLimiter
+#令牌桶每秒填充平均速率
+spring.cloud.gateway.routes[0].filters[0].args.redis-rate-limiter.replenishRate=1
+#令牌桶总容量
+spring.cloud.gateway.routes[0].filters[0].args.redis-rate-limiter.burstCapacity=10
+#用于限流的键的解析器的 Bean 对象的名字。它使用 SpEL 表达式根据#{@beanName}从 Spring 容器中获取 Bean 对象
+spring.cloud.gateway.routes[0].filters[0].args.key-resolver=#{@uriKeyResolver}
+
 #after 路由
 #spring.cloud.gateway.routes[1].id=after_route
 #spring.cloud.gateway.routes[1].uri=http://blog.csdn.net/qq_39654841/category_9123089.html
@@ -68,6 +77,12 @@ spring.cloud.gateway.routes[1].filters[6].name=Hystrix
 # HystrixCommand 名字
 spring.cloud.gateway.routes[1].filters[6].args.name=fallbackcmd
 spring.cloud.gateway.routes[1].filters[6].args.fallbackUri=forward:/eureka_consumer/fallback
+
+hystrix.threadpool.default.coreSize=10
+# 阻塞队列最大队列数
+hystrix.threadpool.default.maxQueueSize=10
+#
+hystrix.threadpool.default.queueSizeRejectionThreshold=10
 #fackball 时间
 hystrix.command.fallbackcmd.execution.isolation.thread.timeoutInMilliseconds=5000
 
