--- a/zuul-gateway/src/main/resources/application.properties
+++ b/zuul-gateway/src/main/resources/application.properties
@@ -78,3 +78,12 @@ spring.security.user.password=zuul-password
 #security.oauth2.client.client-secret=secret
 ## 使用对称加密方式，默认算法hs256
 #security.oauth2.resource.jwt.key-value=zuul_oauth2_jwt
+
+
+hystrix.threadpool.default.coreSize=10
+# 阻塞队列最大队列数
+hystrix.threadpool.default.maxQueueSize=10
+#
+hystrix.threadpool.default.queueSizeRejectionThreshold=10
+#fackball 时间
+hystrix.command.fallbackcmd.execution.isolation.thread.timeoutInMilliseconds=5000
