spring cloud feign 多参数传递

--- a/eureka-consumer/src/main/resources/application.properties
+++ b/eureka-consumer/src/main/resources/application.properties
@@ -35,3 +35,5 @@ spring.main.allow-bean-definition-overriding=true
 # 开启日志
 logging.level.site.sunlong.eurekaConsumer.service=debug
 
+#fackball 时间
+hystrix.command.fallbackcmd.execution.isolation.thread.timeoutInMilliseconds=10000
